--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ya_Nan Zhu"
-  avatar           : "profile.png"
+  # avatar           : "profile.png"
   bio              : "Optimization"
   # location         : "Location"
   employer         :
