--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ya_Nan Zhu"
+  name             : "Ya-Nan Zhu"
   # avatar           : "profile.png"
   bio              : "Optimization"
   # location         : "Location"
