--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Ya-Nan's Homepage"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-# url                      : https://Yanan.Zhu.github.io
+url                      : https://Yanan.Zhu.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -85,8 +85,8 @@ author:
   bio              : "Optimization"
   location         : "Location"
   employer         :
-  # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  # googlescholar    : "http://yourfullgooglescholarurl.com"
+  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  googlescholar    : "http://yourfullgooglescholarurl.com"
   email            :  
   # researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
