--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "Publications"
-    url: /publications/
+    url: /publications/2009-10-01-paper-title-number-1
 
   - title: "Talks"
     url: /talks/    
