--- a/_config.yml
+++ b/_config.yml
@@ -82,6 +82,7 @@ analytics:
 author:
   name             : "Ya-Nan Zhu"
   avatar           : "profile.png"
+  # avatar           : "Headshot.jpg"
   bio              : "Optimization"
   # location         : "Location"
   employer         :
