--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   # name             : "Ya-Nan Zhu"
-  avatar           : "profile.png"
-  # avatar           : "Headshot.jpg"
+  # avatar           : "profile.png"
+  avatar           : "Headshot.jpg"
   # bio              : "Optimization"
   # location         : "Location"
   employer         :
