--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   # name             : "Ya-Nan Zhu"
   # avatar           : "profile.png"
-  avatar           : "Headshot.jpg"
+  avatar           : "Headshot_new.jpg"
   # bio              : "Optimization"
   # location         : "Location"
   employer         :
