--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   # location         : "Location"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  # googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : "https://scholar.google.com/citations?user=0Dc6mSsAAAAJ&hl=en"
   # email            : yzhu4@kumc.edu
   # researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
