--- a/_config.yml
+++ b/_config.yml
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ya-Nan Zhu"
+  # name             : "Ya-Nan Zhu"
   # avatar           : "profile.png"
   avatar           : "Headshot.jpg"
-  bio              : "Optimization algorithmsfor Medical Image Processing, Biomedical Engineering, and Proton Radiation Therapy."
+  bio              : "Optimization algorithms for Medical Image Processing, Biomedical Engineering, and Proton Radiation Therapy."
   location         : "Harbin, Heilongjiang"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
