--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   # avatar           : "profile.png"
   avatar           : "Headshot.jpg"
   bio              : "Optimization algorithms for Medical Image Processing, Biomedical Engineering, and Proton Radiation Therapy."
-  location         : "Harbin, Heilongjiang"
+  location         : "Harbin, Heilongjiang, China"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=0Dc6mSsAAAAJ&hl=en"
